Changed AlignmentMaster, MonsterMaster DiceMaster, TypeMaster to edit MonsterMaster Table

--- a/web/index.xhtml
+++ b/web/index.xhtml
@@ -7,6 +7,10 @@
         <h:outputStylesheet name="css/jsfcrud.css"/>
     </h:head>
     <h:body>
+        <p>
+        <h1>インデックス</h1>
+        </p>        
+        <p>
         <h:form>
             <h:commandLink action="/encounterBattleMember/List" value="戦闘メンバー一覧"/>
         </h:form>
@@ -15,47 +19,48 @@
         </h:form>
         <h:form>
             <h:commandLink action="/encounterRecord/List" value="エンカウンター一覧"/>
+        </h:form>    
+        <h:form>
+            <h:commandLink action="/monsterMaster/List" value="モンスター一覧"/>
         </h:form>
-                    <h:form>
-                    <h:commandLink action="/abilityMaster/List" value="Show All AbilityMaster Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/diceMaster/List" value="Show All DiceMaster Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/monsterAbilityRecord/List" value="Show All MonsterAbilityRecord Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/monsterMaster/List" value="Show All MonsterMaster Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/monsterSaveRecord/List" value="Show All MonsterSaveRecord Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/monsterSkillRecord/List" value="Show All MonsterSkillRecord Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/monsterSubType/List" value="Show All MonsterSubType Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/saveMaster/List" value="Show All SaveMaster Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/sizeMaster/List" value="Show All SizeMaster Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/scenarioRecord/List" value="Show All ScenarioRecord Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/alignmentMaster/List" value="Show All AlignmentMaster Items"/>
-                </h:form>
-                <h:form>
-                    <h:commandLink action="/typeMaster/List" value="Show All TypeMaster Items"/>
-                </h:form>
-</h:body>
+        </p>            
+        <h:form>
+            <h:commandLink action="/abilityMaster/List" value="Show All AbilityMaster Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/diceMaster/List" value="Show All DiceMaster Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/monsterAbilityRecord/List" value="Show All MonsterAbilityRecord Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/monsterSaveRecord/List" value="Show All MonsterSaveRecord Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/monsterSkillRecord/List" value="Show All MonsterSkillRecord Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/monsterSubType/List" value="Show All MonsterSubType Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/saveMaster/List" value="Show All SaveMaster Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/sizeMaster/List" value="Show All SizeMaster Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/campaignMaster/List" value="Show All CampaignMaster Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/scenarioRecord/List" value="Show All ScenarioRecord Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/alignmentMaster/List" value="Show All AlignmentMaster Items"/>
+        </h:form>
+        <h:form>
+            <h:commandLink action="/typeMaster/List" value="Show All TypeMaster Items"/>
+        </h:form>
+    </h:body>
 
 
 
