Modified to each field  to be printed as expected. Adde Labe for each column

--- a/web/monsterMaster/ListForEncounter.xhtml
+++ b/web/monsterMaster/ListForEncounter.xhtml
@@ -14,18 +14,13 @@
             <h:panelGroup id="messagePanel" layout="block">
                 <h:messages errorStyle="color: red" infoStyle="color: green" layout="table"/>
             </h:panelGroup>
-            <h:outputText escape="false" value="#{bundle.ListMonsterMasterEmpty}" rendered="#{monsterMasterController.items.rowCount == 0}"/>
-            <h:panelGroup rendered="#{monsterMasterController.items.rowCount > 0}">
-                <h:outputText value="#{monsterMasterController.pagination.pageFirstItem + 1}..#{monsterMasterController.pagination.pageLastItem + 1}/#{monsterMasterController.pagination.itemsCount}"/>&nbsp;
-                <h:commandLink action="#{monsterMasterController.previous}" value="#{bundle.Previous} #{monsterMasterController.pagination.pageSize}" rendered="#{monsterMasterController.pagination.hasPreviousPage}"/>&nbsp;
-                <h:commandLink action="#{monsterMasterController.next}" value="#{bundle.Next} #{monsterMasterController.pagination.pageSize}" rendered="#{monsterMasterController.pagination.hasNextPage}"/>&nbsp;
+            <h:outputText escape="false" value="#{bundle.ListMonsterMasterEmpty}" rendered="#{monsterDataController.items.rowCount == 0}"/>
+            <h:panelGroup rendered="#{monsterDataController.items.rowCount > 0}">
+                <h:outputText value="#{monsterDataController.pagination.pageFirstItem + 1}..#{monsterDataController.pagination.pageLastItem + 1}/#{monsterDataController.pagination.itemsCount}"/>&nbsp;
+                <h:commandLink action="#{monsterDataController.previous}" value="#{bundle.Previous} #{monsterDataController.pagination.pageSize}" rendered="#{monsterDataController.pagination.hasPreviousPage}"/>&nbsp;
+                <h:commandLink action="#{monsterDataController.next}" value="#{bundle.Next} #{monsterDataController.pagination.pageSize}" rendered="#{monsterDataController.pagination.hasNextPage}"/>&nbsp;
                 <h:dataTable value="#{monsterDataController.items}" var="item" border="0" cellpadding="2" cellspacing="0" rowClasses="jsfcrud_odd_row,jsfcrud_even_row" rules="all" style="border:solid 1px">
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_id}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.id}"/>
-                    </h:column>
+
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="#{bundle.ListMonsterMasterTitle_name}"/>
@@ -34,156 +29,133 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_hitDiceNum}"/>
+                            <h:outputText value="能力値"/>
                         </f:facet>
-                        <h:outputText value="#{item.hitDiceNum}"/>
+                        <h:outputText value="#{item.abilities}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_initiative}"/>
+                            <h:outputText value="AC}"/>
                         </f:facet>
-                        <h:outputText value="#{item.initiative}"/>
+                        <h:outputText value="#{item.armorClass}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_speed}"/>
+                            <h:outputText value="攻撃"/>
                         </f:facet>
-                        <h:outputText value="#{item.speed}"/>
+                        <h:outputText value="#{item.normalAttackDescription}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_ac}"/>
+                            <h:outputText value="遭遇難易度"/>
                         </f:facet>
-                        <h:outputText value="#{item.ac}"/>
+                        <h:outputText value="#{item.charangingRate}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_acTouch}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.acTouch}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_acFlatFooted}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.acFlatFooted}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_baseAttack}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.baseAttack}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_grapple}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.grapple}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_attack}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.attack}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_reach}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.reach}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_specialAttacks}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.specialAttacks}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_specialQualities}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.specialQualities}"/>
-                    </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_environment}"/>
+                            <h:outputText value="環境"/>
                         </f:facet>
                         <h:outputText value="#{item.environment}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_organization}"/>
+                            <h:outputText value="特技"/>
+                        </f:facet>
+                        <h:outputText value="#{item.feats}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="全力攻撃"/>
+                        </f:facet>
+                        <h:outputText value="#{item.fullAttackDescription}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="ヒットダイス"/>
+                        </f:facet>
+                        <h:outputText value="#{item.hitDice}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="イニシアチブ"/>
+                        </f:facet>
+                        <h:outputText value="#{item.initiative}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="クラス"/>
+                        </f:facet>
+                        <h:outputText value="#{item.klass}"/>
+                    </h:column>
+                    <h:column>
+                        <f:facet name="header">
+                            <h:outputText value="組織"/>
                         </f:facet>
                         <h:outputText value="#{item.organization}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_challengeRating}"/>
+                            <h:outputText value="セーブ"/>
                         </f:facet>
-                        <h:outputText value="#{item.challengeRating}"/>
+                        <h:outputText value="#{item.save}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_treasure}"/>
+                            <h:outputText value="技能"/>
                         </f:facet>
-                        <h:outputText value="#{item.treasure}"/>
+                        <h:outputText value="#{item.skills}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_advancement}"/>
+                            <h:outputText value="特殊攻撃"/>
                         </f:facet>
-                        <h:outputText value="#{item.advancement}"/>
+                        <h:outputText value="#{item.specialAttack}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_levelAdjustment}"/>
+                            <h:outputText value="その他の特殊能力"/>
                         </f:facet>
-                        <h:outputText value="#{item.levelAdjustment}"/>
+                        <h:outputText value="#{item.specialQualities}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_contactSpace}"/>
+                            <h:outputText value="移動速度"/>
                         </f:facet>
-                        <h:outputText value="#{item.contactSpace}"/>
+                        <h:outputText value="#{item.speed}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_type}"/>
+                            <h:outputText value="基本攻撃/組み付き"/>
                         </f:facet>
-                        <h:outputText value="#{item.type}"/>
+                        <h:outputText value="#{item.baseAttackAndGrapple}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_sizeId}"/>
+                            <h:outputText value="接敵面/間合い"/>
                         </f:facet>
-                        <h:outputText value="#{item.sizeId}"/>
+                        <h:outputText value="#{item.contactSpaceAndReach}"/>
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_hitDiceType}"/>
+                            <h:outputText value="サイズと種別"/>
                         </f:facet>
-                        <h:outputText value="#{item.hitDiceType}"/>
+                        <h:outputText value="#{item.sizeAndType}"/>
                     </h:column>
-                    <h:column>
-                        <f:facet name="header">
-                            <h:outputText value="#{bundle.ListMonsterMasterTitle_alignment}"/>
-                        </f:facet>
-                        <h:outputText value="#{item.alignment}"/>
-                    </h:column>
+                    
                     <h:column>
                         <f:facet name="header">
                             <h:outputText value="&nbsp;"/>
                         </f:facet>
-                        <h:commandLink action="#{monsterMasterController.prepareView}" value="#{bundle.ListMonsterMasterViewLink}"/>
+                        <h:commandLink action="#{monsterDataController.prepareView}" value="#{bundle.ListMonsterMasterViewLink}"/>
                         <h:outputText value=" "/>
-                        <h:commandLink action="#{monsterMasterController.prepareEdit}" value="#{bundle.ListMonsterMasterEditLink}"/>
+                        <h:commandLink action="#{monsterDataController.prepareEdit}" value="#{bundle.ListMonsterMasterEditLink}"/>
                         <h:outputText value=" "/>
-                        <h:commandLink action="#{monsterMasterController.destroy}" value="#{bundle.ListMonsterMasterDestroyLink}"/>
+                        <h:commandLink action="#{monsterDataController.destroy}" value="#{bundle.ListMonsterMasterDestroyLink}"/>
                     </h:column>
                 </h:dataTable>
             </h:panelGroup>
             <br />
-            <h:commandLink action="#{monsterMasterController.prepareCreate}" value="#{bundle.ListMonsterMasterCreateLink}"/>
+            <h:commandLink action="#{monsterDataController.prepareCreate}" value="#{bundle.ListMonsterMasterCreateLink}"/>
         </h:form>
         </ui:define>
     </ui:composition>
