--- a/web/monsterMaster/ListForEncounter.xhtml
+++ b/web/monsterMaster/ListForEncounter.xhtml
@@ -35,7 +35,7 @@
                     </h:column>
                     <h:column>
                         <f:facet name="header">
-                            <h:outputText value="AC}"/>
+                            <h:outputText value="AC"/>
                         </f:facet>
                         <h:outputText value="#{item.armorClass}"/>
                     </h:column>
